<resources>

    <string name="app_name">JobSender</string>
    <string name="action_settings">Settings</string>

    <string name="clock_in_button">Clock In</string>
    <string name="clock_out_button">Clock Out</string>
    <string name="done_button">Done</string>


    <string name="clock_in_text">Clock In Time:</string>
    <string name="clock_out_text">Clock Out Time:</string>
    <string name="no_time">N/A</string>

    <string name="client_text_field">Client Name</string>
    <string name="desc_text_field">Job Description</string>

    <string name="send_button">Send</string>
    <string name="clear_button">Clear</string>

    <string name="title_activity_settings">Settings</string>

    <string name="user_name_title">Your Full Name</string>
    <string name="subject_line_title">Default Subject Line</string>
    <string name="recipients_title">Email Recipients</string>
    <string name="recipients_subtitle">You may enter in more than one email address, please separate them with a "," only.</string>
    <string name="save_button">Save</string>

</resources>
