<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ClockInActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            xmlns:local="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            local:popupTheme="@style/Theme.AppCompat.Light"
            />

        <!-- Time Button -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/time_card_view"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#4CAF50"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/timeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:minWidth="170dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:text="@string/clock_in_button"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <!-- Saved Times -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/clock_in_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_time"
                    android:id="@+id/clockInTextView"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/clock_out_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_time"
                    android:id="@+id/clockOutTextView"/>
            </LinearLayout>


        </LinearLayout>

        <!-- Client Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_text_field"
                android:id="@+id/client_etext_field"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Job Description -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc_etext_field"
                android:hint="@string/desc_text_field" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Clear and Send Buttons -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <!--- Clear Button -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/clear_card_view"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#FF5252"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/clearTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_delete_white_36dp"
                        android:minWidth="150dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:text="@string/clear_button"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <!-- Send Button -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/send_card_view"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#4CAF50"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/sendTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:drawableRight="@drawable/ic_send_white_36dp"
                        android:minWidth="150dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:text="@string/send_button"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>





</RelativeLayout>
